# pico-openpgp

./: CMakeLists.txt
.github/workflows/: nightly.yml
